# esp32c6-MicroRos

./: CMakeLists.txt  README.md  partition.csv  partitions.csv  platformio.ini  platformio.ini.backup  sdkconfig  sdkconfig.esp32c6-espidf-test  sdkconfig.esp32c6-espidf-test.old  sdkconfig.old
data/: root.html
data/julian/: index.html
data/tom/: index.html
main/: CMakeLists.txt  MicroRosManager.cpp  MicroRosManager.h  PurpleMamriController.h  README.md  RobotController.cpp  RobotController.h  RobotStructs.h  ServoValve.cpp  ServoValve.h  SystemParameters.h  app_main.cpp  arduino_compat.cpp  pinDefinitions.h
main/AS5600/: AS5600.cpp  AS5600.h
main/InputController/: CanvasManager.cpp  CanvasManager.h  DisplayCanvas.cpp  DisplayCanvas.h  InputController.cpp  InputController.h  InputStructs.h  MamriWebServer.cpp  MamriWebServer.h
main/InputController/I2C/: I2CManager.cpp  I2CManager.h
main/InputController/SPI/: SPI0Manager.cpp  SPI0Manager.h  SPI1Manager.cpp  SPI1Manager.h
main/MicroRosController/: MicroRosManager.cpp  MicroRosManager.h
main/PneumaticStepper/: PneumaticStepper.cpp  PneumaticStepper.h
main/RobotController/: KinematicsController.cpp  KinematicsController.h  RobotController.cpp  RobotController.h
main/RobotController/Robots/: PurpleMamriController.cpp  PurpleMamriController.h
main/TCA9548/: TCA9548.cpp  TCA9548.h
main_backup/: CMakeLists.txt  hello_world_main.c
src_backup/: pinDefinitions.h
src_backup/InputController/: CanvasManager.cpp  CanvasManager.h  InputController.cpp  InputController.h  MamriWebServer.cpp  MamriWebServer.h
src_backup/MicroRosController/: MicroRosController.cpp  MicroRosController.h
src_backup/RobotController/: KinematicsController.cpp  (+3 more)
test/: README
(+8 files in other folders)
