idf_component_register(
    SRCS
        "app_main.cpp"
        "MicroRosController/MicroRosManager.cpp"
        "RobotController/RobotController.cpp"
        "RobotController/KinematicsController.cpp"
        "RobotController/Robots/PurpleMamriController.cpp"
        "arduino_compat.cpp"
        "PneumaticStepper/PneumaticStepper.cpp"
        "PneumaticStepper/ServoValve.cpp"
        "InputController/SPI/SPI1Manager.cpp"
        "InputController/InputController.cpp"
        "InputController/MamriWebServer.cpp"
        "InputController/CanvasManager.cpp"
        "InputController/I2C/I2CManager.cpp"
        "AS5600/AS5600.cpp"
        "TCA9548/TCA9548.cpp"
        "InputController/SPI/SPI0Manager.cpp"

    INCLUDE_DIRS
        "."
        "../include"
)